--- a/index.html
+++ b/index.html
@@ -37,10 +37,30 @@
         <div class="navbar-1">
                 <div><a href=""><i class="fa-solid fa-house"></i></a></div>
                 <div><a href="">About</a></div>
-                <div><a href="">Projects <span><i class="fa-solid fa-chevron-down"></i></span></a></div>
-                <div><a href="">Publication</a></div>
-                <div><a href="">Book Author</a></div>
-                <div><a href="">Achievements <span><i class="fa-solid fa-chevron-down"></i></span></a></div>           
+            <div class="dropdown">
+        <div><a href="">Projects <span><i class="fa-solid fa-chevron-down"></i></span></a>
+          <div class="dropdown-content">
+            <a href="#" class="dropdown-hover">Chancelor</a>
+            <a href="#" class="dropdown-hover">vice Chancelor</a>
+            <a href="#" class="dropdown-hover">Statuatory body</a>
+            <a href="#" class="dropdown-hover">Statuatory body</a>
+            <a href="#" class="dropdown-hover">Statuatory body</a>
+          </div>
+        </div>
+      </div>
+      <div><a href="">Publication</a></div>
+                <div><a href="">Book Author</a></div> 
+            <div class="dropdown">
+        <div><a href="">Achievements <span><i class="fa-solid fa-chevron-down"></i></span></a>
+          <div class="dropdown-content">
+            <a href="#" class="dropdown-hover">Chancelor</a>
+            <a href="#" class="dropdown-hover">vice Chancelor</a>
+            <a href="#" class="dropdown-hover">Statuatory body</a>
+            <a href="#" class="dropdown-hover">Statuatory body</a>
+            <a href="#" class="dropdown-hover">Statuatory body</a>
+          </div>
+        </div>
+      </div>
         </div>
     </header>
 
